fix: persist C001 reviewed reaches across sessions

--- a/.napkin.md
+++ b/.napkin.md
@@ -3,6 +3,7 @@
 ## Corrections
 | Date | Source | What Went Wrong | What To Do Instead |
 |------|--------|----------------|-------------------|
+| 2026-02-27 | bug | lake_app.py C001 tab filtered reviewed reaches using only `st.session_state.pending_fixes` (lost on refresh/restart) — C004 tab correctly queried `lint_fix_log` | Always query lint_fix_log for reviewed reaches (survives restarts), merge with session state for instant feedback |
 | 2026-02-23 | self | Ran psql -f with relative path in worktree, schema didn't apply | Always use absolute paths for psql -f in worktrees |
 | 2026-02-23 | self | PG schema had SERIAL PRIMARY KEY on facc_fix_log but DuckDB sends NULLs for that column | Use plain INTEGER, no PK constraint when mirroring DuckDB tables with auto-generated IDs |
 | 2026-02-23 | self | v17c CALCULATE_DIST_OUT (Jan 22) corrupted 74,006 reaches (29.76%) — BFS flag heuristic at bifurcations uses max(available) when one child is -9999, never revisits | Never recalculate dist_out — use v17b values. v17c should only add hydro_dist_out (Dijkstra) as a new column |
