docs: add SWORD node ID warning

--- a/.napkin.md
+++ b/.napkin.md
@@ -19,6 +19,7 @@
 - (none yet)
 
 ## Domain Notes
+- **SWORD reused node IDs across versions** — same node_id can map to completely different rivers/coordinates between v17 releases. Always validate node coordinates spatially when joining across data sources. African rivers (ANJOBONY, BEMARIVO, ELE, V7_2, LILONGWE, SARARE) are affected; SA rivers are fine because their geometry didn't change.
 - DB files live at `/Users/jakegearon/projects/SWORD/data/duckdb/`, NOT in worktree paths. DuckDB files are symlinked or accessed from main repo.
 - PostgreSQL sword_v17c schema v1.7.0 matches DuckDB v17c as of 2026-02-23 (percentile SWOT columns, dn_node_id/up_node_id, node_order, topology_suspect/approved, facc_corrections, v17c_flow_corrections)
 - MCP PostgreSQL tool connects to `postgres` db, not `sword_v17c` — use psql CLI for sword_v17c queries
